# graphsage-simple

cpp/: CMakeLists.txt  aggregators.hpp  encoders.hpp  main.cpp  models.hpp  typedef.hpp  utils.hpp
